[project]
name = "pulsenet-engine"
version = "0.1.0"
description = "PulseNet predictive engine — RSS ingestion, multi-agent Gemini consensus, SRI cascade math (decision-support only, no autonomous execution)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "feedparser>=6.0",
    "networkx>=3.2",
    "numpy>=1.26",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "google-genai>=1.0.0",

]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
